# speexdsp

./: CMakeLists.txt  config.h.cmake
cmake/: TestVarArrays.cmake  libspeexdsp-config.cmake
include/speex/: speex_preprocess.h
libspeexdsp/: preprocess.c
